<resources>
    <string name="app_name">MovieДома</string>
    <string name="todo">TODO</string>
    <string name="preference_file">shared_preferences</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="session_id">session_id</string>
    <string name="error">Ошибка</string>
    <string name="wrong">Неверные данные</string>
    <string name="favourites">Любимые фильмы</string>
    <string name="settings">Пользовательские настройки</string>
    <string name="min"> Минимум</string>
    <string name="dollar"> $</string>
    <string name="release_date">Дата выпуска:</string>
    <string name="budget">Бюджет:</string>
    <string name="revenue">Доходов:</string>
    <string name="produced_by">Произведено:</string>
    <string name="info">Инфо</string>
    <string name="cast">В ролях</string>
    <string name="review">Рассмотрение</string>
    <string name="now_playing">СЕЙЧАС ИГРАЕТ</string>
    <string name="popular">ПОПУЛЯРНЫЙ</string>
    <string name="upcoming">В ПЕРЕДИ</string>
    <string name="sign_in">Войти</string>
    <string name="wrong_data">Неверные данные</string>
    <string name="auth_hint">Введите ваше имя пользователя и пароль</string>
</resources>
