<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/ivBanner"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:cropToPadding="false"
                android:paddingTop="380dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/go_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAdditional"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/appColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivBanner" />

            <ImageView
                android:id="@+id/ivFull"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/tvAdditional"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvReleaseYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivFull"
                app:layout_constraintTop_toTopOf="@+id/tvAdditional"
                tools:text="2020" />

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivFull"
                app:layout_constraintTop_toBottomOf="@+id/tvReleaseYear"
                tools:text="Avengers: Final" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivFull"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
                tools:text="Fantasy" />

            <TextView
                android:id="@+id/tvDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:text="&#x2022;"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvReleaseYear"
                app:layout_constraintStart_toEndOf="@+id/tvReleaseYear"
                app:layout_constraintTop_toTopOf="@+id/tvReleaseYear" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvReleaseYear"
                app:layout_constraintStart_toEndOf="@+id/tvDot"
                app:layout_constraintTop_toTopOf="@+id/tvReleaseYear"
                tools:text="1 h 50 min" />

            <GridLayout
                android:id="@+id/gvButtons"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/appColor"
                android:columnCount="3"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:rowCount="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAdditional">

                <Button
                    android:id="@+id/btnInfo"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:background="@color/appColor"
                    android:text="@string/info"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnActors"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:background="@color/appColor"
                    android:text="@string/cast"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnReview"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:background="@color/appColor"
                    android:text="@string/review"
                    android:textColor="@android:color/white" />
            </GridLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gvButtons">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/tmbd_logo" />

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="@+id/ivLogo"
                    app:layout_constraintStart_toStartOf="@+id/ivLogo"
                    app:layout_constraintTop_toBottomOf="@+id/ivLogo"
                    tools:text="9,0" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRating" />

                <TextView
                    android:id="@+id/tvPlot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:text="564654" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/release_date"
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvPlot"
                    app:layout_constraintTop_toBottomOf="@+id/tvPlot" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv1"
                    app:layout_constraintStart_toEndOf="@+id/tv1"
                    app:layout_constraintTop_toTopOf="@+id/tv1"
                    tools:text="20, Feburary 2020" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/produced_by"
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv1"
                    app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate" />

                <TextView
                    android:id="@+id/tvProducers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/tvPlot"
                    app:layout_constraintStart_toEndOf="@+id/tv2"
                    app:layout_constraintTop_toTopOf="@+id/tv2"
                    tools:text="Sam SmithSam SmithSam SmithSam SmithSam SmithSam Smith" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/budget"
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv2"
                    app:layout_constraintTop_toBottomOf="@+id/tvProducers" />

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/revenue"
                    android:textColor="@android:color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv3"
                    app:layout_constraintTop_toBottomOf="@+id/tvBudget" />

                <TextView
                    android:id="@+id/tvBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv3"
                    app:layout_constraintStart_toEndOf="@+id/tv3"
                    app:layout_constraintTop_toTopOf="@+id/tv3"
                    tools:text="$200030404" />

                <TextView
                    android:id="@+id/tvRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv4"
                    app:layout_constraintStart_toEndOf="@+id/tv4"
                    app:layout_constraintTop_toTopOf="@+id/tv4"
                    tools:text="$2000000" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>